name: rdf4h
version: 1.2.6
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE.txt
copyright: (c) Calvin Smith, Rob Stewart
maintainer: Rob Stewart <robstewart@gmail.com>
stability: Experimental
homepage: https://github.com/robstewart57/rdf4h
bug-reports: https://github.com/robstewart57/rdf4h/issues
synopsis: A library for RDF processing in Haskell
description: 'RDF for Haskell' is a library for working with RDF in Haskell.
             At present it includes parsers and serializers for RDF in the N-Triples
             and Turtle, and parsing support for RDF/XML. It provides abilities such as querying
             for triples  containing a particular subject, predicate, or object, or
             selecting triples that satisfy an arbitrary predicate function.
category: RDF
author: Calvin Smith
tested-with: GHC ==7.6.3
data-dir: ""
extra-source-files: examples/ParseURLs.hs
extra-tmp-files: test
 
source-repository head
    type: git
    location: https://github.com/robstewart57/rdf4h.git
 
flag small_base
    Description:  Choose the new smaller, split-up base package.
    Default: False
 
flag tests
    Description:  Build the tests
    Default: False
 
flag hpc
    Description:  Use HPC for tests
 
library
    build-depends: parsec >=3, HTTP >=4000.0.0, hxt >=9.3.1.2,
                   text -any, unordered-containers -any, hashable -any,
                   network-uri -any
     
    if flag(small_base)
        build-depends: base >=3, bytestring -any, directory -any,
                       containers -any
        exposed: True
        buildable: True
    else
        build-depends: base <3
        exposed: True
        buildable: True
    exposed-modules: Data.RDF Data.RDF.Namespace Data.RDF.Types
                     Data.RDF.Query Data.RDF.MGraph Data.RDF.TriplesGraph
                     Text.RDF.RDF4H.TurtleParser Text.RDF.RDF4H.TurtleSerializer
                     Text.RDF.RDF4H.NTriplesParser Text.RDF.RDF4H.NTriplesSerializer
                     Text.RDF.RDF4H.XmlParser
    exposed: True
    buildable: True
    extensions: BangPatterns RankNTypes MultiParamTypeClasses Arrows
                FlexibleContexts OverloadedStrings
    hs-source-dirs: src
    other-modules: Data.RDF.MTriples Text.RDF.RDF4H.ParserUtils
                   Text.RDF.RDF4H.Interact
    ghc-prof-options: -auto-all -prof -caf-all
    ghc-options: -Wall -fno-warn-unused-do-bind -funbox-strict-fields -O2
 
executable rdf4h
    build-depends: parsec >=3, HTTP >=4000.0.0, hxt >=9.3.1.2,
                   containers -any, text -any, hashable -any, network-uri -any
     
    if flag(small_base)
        build-depends: base >=3, bytestring -any
        buildable: True
    else
        build-depends: base >=4 && <6
        buildable: True
    main-is: Rdf4hParseMain.hs
    buildable: True
    extensions: BangPatterns RankNTypes ScopedTypeVariables
                MultiParamTypeClasses FlexibleContexts OverloadedStrings
    hs-source-dirs: src
    other-modules: Data.RDF.MTriples
    ghc-prof-options: -auto-all -prof -caf-all
    ghc-options: -Wall -fno-warn-unused-do-bind -funbox-strict-fields
 
test-suite test-rdf4h
    build-depends: base >=4 && <6, parsec >=3, test-framework >=0.2.3,
                   test-framework-quickcheck2 -any, test-framework-hunit >=0.2.7,
                   HTTP >=4000.0.0, QuickCheck >=1.2.0.0, HUnit >=1.2.2.1,
                   bytestring -any, hxt >=9.3.1.2, containers -any, text -any,
                   knob -any, unordered-containers -any, hashable -any,
                   network-uri -any
    type: exitcode-stdio-1.0
    main-is: Test.hs
    buildable: True
    extensions: RankNTypes MultiParamTypeClasses Arrows
                FlexibleContexts OverloadedStrings
    hs-source-dirs: src testsuite/tests
    other-modules: Data.RDF Data.RDF.Namespace Data.RDF.MGraph
                   Data.RDF.TriplesGraph Text.RDF.RDF4H.NTriplesParser
                   Text.RDF.RDF4H.NTriplesSerializer Text.RDF.RDF4H.TurtleParser
                   Text.RDF.RDF4H.TurtleSerializer Text.RDF.RDF4H.XmlParser
    ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans -fno-warn-name-shadowing -funbox-strict-fields
 